# lenny_calibration

./: README.md
cri_gazebo_plugins/: CMakeLists.txt  README.md  package.xml
cri_gazebo_plugins/src/: gazebo_ros_moveit_planning_scene.cpp
lenny/lenny_calibration/config/: camera_robot_calibration.yaml
lenny/lenny_calibration/launch/: capture_poses.launch  marker_detection.launch
openrave_catkin/: CMakeLists.txt
