<?xml version="1.0"?>
<package format="2">
  <name>cri_gazebo_plugins</name>
  <version>2.3.5</version>
  <description>Additional gazebo plugins.</description>
  
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez6@gmail.com">Francisco Suarez Ruiz</author>

  <url type="website">https://github.com/crigroup/cri_gazebo_plugins</url>
  <url type="bugtracker">https://github.com/crigroup/cri_gazebo_plugins/issues</url>
  <url type="repository">https://github.com/crigroup/cri_gazebo_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>moveit_msgs</depend>

</package>
